# pymiracl

./: .gitignore  .gitmodules  README.md  configure.ac
python/pymiracl/: __init__.py  __main__.py  test_curve.py
src/: Makefile.am
src/pymiracl/: Makefile.am  pymiracl.c  pymiracl.h
